<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="36dp"
        android:orientation="vertical">

        <!--        -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="24sp"
            android:text="@string/activity_main_register_title" />

        <!--        -->
        <Spinner
            android:id="@+id/spinner_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            tools:listitem="@android:layout/simple_list_item_1" />

        <!--        -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_first_name_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_last_name_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_email_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_phone_number"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_phone_number_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_password_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_account"
            android:layout_width="match_parent"
            android:layout_marginTop="36dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_create_account_button_text" />


    </LinearLayout>


</ScrollView>